--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
           <div class="divider"></div>
           <div class="title-text">
             <div class="breadcrumb">宝丰人 › 企业文化践行 › 政策热点学习</div>
-            <div class="main-title">关于深入贯彻落实宝丰集团2025年中经营管理工作会议精神的通知</div>
+            <div class="main-title">中共中央关于制定国民经济和社会发展第十五个五年规划的建议</div>
           </div>
         </div>
 
@@ -851,7 +851,7 @@
               type="text"
               class="search-input"
               id="searchInput"
-              placeholder="2025年9月"
+              placeholder="2025年11月"
             />
             <div class="search-icon" id="searchIcon"></div>
           </div>
@@ -926,166 +926,133 @@
   {
     id: 1,
     type: "single",
-    question: "红四煤矿在成本管控方面的突出做法是？",
+    question: "《中共中央关于制定国民经济和社会发展第十五个五年规划的建议》由哪次会议通过",
     options: [
-      { text: "减少设备投入", correct: false },
-      { text: "通过技术手段解决成本管控问题", correct: true },
-      { text: "降低员工薪酬", correct: false },
-      { text: "缩减安全培训预算", correct: false }
+      { text: "中国共产党第十九届中央委员会第四次全体会议", correct: false },
+      { text: "中国共产党第二十届中央委员会第四次全体会议", correct: true },
+      { text: "中国共产党第二十届中央委员会第三次全体会议", correct: false },
+      { text: "中国共产党第二十一届中央委员会第一次全体会议", correct: false }
     ]
   },
   {
     id: 2,
     type: "single",
-    question: "焦化事业部环保部的核心管理要求是？",
+    question: "“十五五”时期在基本实现社会主义现代化进程中的地位是",
     options: [
-      { text: "优先使用最贵的环保设备", correct: false },
-      { text: "用最小的投入解决环保问题", correct: true },
-      { text: "只关注国家环保标准，忽略地方标准", correct: false },
-      { text: "暂缓环保项目投资", correct: false }
+      { text: "起步阶段", correct: false },
+      { text: "承前启后的重要地位", correct: true },
+      { text: "收尾阶段", correct: false },
+      { text: "过渡阶段", correct: false }
     ]
   },
   {
     id: 3,
     type: "single",
-    question: "公辅事业部电力运营公司的核心管理要求是？",
+    question: "“十五五’时期为实现碳达峰目标，实施的能源消费相关举措是",
     options: [
-      { text: "减少电力消耗", correct: false },
-      { text: "提升电力交易效能，确保收益落地", correct: true },
-      { text: "仅管理现有电力，不参与储能交易", correct: false },
-      { text: "降低设备维护频率", correct: false }
+      { text: "推动能源消费高碳化", correct: false },
+      { text: "停止新能源开发利用", correct: false },
+      { text: "减少清洁能源", correct: false },
+      { text: "提高终端用能电气化水平", correct: true }
     ]
   },
   {
     id: 4,
     type: "single",
-    question: "建设事业部计划部需解决的关键问题是？",
+    question: "下列哪项不属于“十五五”时期经济社会发展主要目标中“高质量发展取得显著成效”的内容",
     options: [
-      { text: "材料计划过于宽松", correct: false },
-      { text: "材料到场与现场施工脱节", correct: true },
-      { text: "设备采购周期过短", correct: false },
-      { text: "施工人员过多", correct: false }
+      { text: "经济增长保持在合理区间", correct: false },
+      { text: "居民消费率明显提高", correct: false },
+      { text: "碳达峰目标如期实现", correct: true },
+      { text: "新型工业化、信息化、城镇化、农业现代化取得重大进展", correct: false }
     ]
   },
   {
     id: 5,
     type: "single",
-    question: "马莲台煤矿因“2・17”安全生产事故，被要求在哪个方面为全公司树立标杆？",
+    question: "现代化产业体系是中国式现代化的",
     options: [
-      { text: "成本最低", correct: false },
-      { text: "产量最高", correct: false },
-      { text: "矿井规范管理", correct: true },
-      { text: "技术创新", correct: false }
+      { text: "精神文化基础", correct: false },
+      { text: "物质技术基础", correct: true },
+      { text: "制度保障基础", correct: false },
+      { text: "社会治理基础", correct: false }
     ]
   },
   {
     id: 6,
     type: "single",
-    question: "化工事业部烯烃三厂因何种问题被要求深入调查并严肃处理？",
+    question: "下列哪项不属于培育壮大新兴产业和未来产业的举措",
     options: [
-      { text: "设备老化", correct: false },
-      { text: "能耗超标", correct: false },
-      { text: "EVA2825产品质量事故", correct: true },
-      { text: "团队凝聚力不足", correct: false }
+      { text: "加快新能源、新材料等战略性新兴产业集群发展", correct: false },
+      { text: "推动量子科技、生物制造等成为新的经济增长点", correct: false },
+      { text: "优化提升产业、回答等传统产业", correct: true },
+      { text: "实施新技术新产品新场景大规模应用示范行动", correct: false }
     ]
   },
   {
     id: 7,
     type: "single",
-    question: "四股泉煤矿需在何时报审关于开采方式的专报？",
+    question: "加强原始创新和关键核心技术攻关，完善新型举国体制，全链条推动重点领域关键核心技术攻关取得决定性突破，下列哪项不属于该重点领域",
     options: [
-      { text: "7月中旬", correct: false },
-      { text: "8月中旬", correct: true },
-      { text: "9月中旬", correct: false },
-      { text: "10月中旬", correct: false }
+      { text: "集成电路", correct: false },
+      { text: "工业母机", correct: false },
+      { text: "高端仪器", correct: false },
+      { text: "纺织机械", correct: true }
     ]
   },
   {
     id: 8,
     type: "single",
-    question: "储运事业部装备部需重点解决的问题是？",
+    question: "强大国内市场是中国式现代化的",
     options: [
-      { text: "人员冗余", correct: false },
-      { text: "皮带跑偏、运行监测", correct: true },
-      { text: "原料采购价格过高", correct: false },
-      { text: "环保排放不达标", correct: false }
+      { text: "战略依托", correct: true },
+      { text: "根本目的", correct: false },
+      { text: "根本保障", correct: false },
+      { text: "核心动力", correct: false }
     ]
   },
   {
     id: 9,
     type: "single",
-    question: "精细化工事业部焦油厂针对安全管理人员配置问题，需在何时前形成专报？",
+    question: "下列哪项不属于“加快构建高水平社会主义市场经济体制”的举措",
     options: [
-      { text: "8月5日", correct: false },
-      { text: "8月10日", correct: true },
-      { text: "8月15日", correct: false },
-      { text: "8月20日", correct: false }
+      { text: "充分激发各类经营主体活力", correct: false },
+      { text: "加快完善要素市场化配置体制机制", correct: false },
+      { text: "提升宏观经济治理能力", correct: false },
+      { text: "推进农业农村现代化", correct: true }
     ]
   },
   {
     id: 10,
     type: "single",
-    question: "内蒙新材料项目需确保四期烯烃项目在何时全面投产？",
+    question: "“十五五”时期加快建设新型能源体系，需推进化石能源的何种发展方式",
     options: [
-      { text: "2025年底", correct: false },
-      { text: "2026年底", correct: true },
-      { text: "2027年底", correct: false },
-      { text: "2028年底", correct: false }
+      { text: "全面替代退出", correct: false },
+      { text: "安全可靠有序替代", correct: true },
+      { text: "无限制扩大使用", correct: false },
+      { text: "仅保留煤炭能源使用", correct: false }
     ]
   },
   {
     id: 11,
     type: "single",
-    question: "辅助单位检验中心的管理要求中，需由谁牵头核查EVA漏检原因？",
+    question: "坚持把解决好“三农”问题作为全党工作",
     options: [
-      { text: "董光斌", correct: false },
-      { text: "席浩民", correct: true },
-      { text: "赵福君", correct: false },
-      { text: "刘元管", correct: false }
+      { text: "重中之重", correct: true },
+      { text: "首要任务", correct: false },
+      { text: "核心工作", correct: false },
+      { text: "根本任务", correct: false }
     ]
   },
   {
     id: 12,
     type: "single",
-    question: "销售公司被要求在多长时间内完成团队整改，淘汰低效人员？",
+    question: "绿色发展是中国式现代化的",
     options: [
-      { text: "3个月", correct: false },
-      { text: "6个月", correct: true },
-      { text: "9个月", correct: false },
-      { text: "12个月", correct: false }
-    ]
-  },
-  {
-    id: 13,
-    type: "single",
-    question: "监察部的核心职业准则中，首要前提是？",
-    options: [
-      { text: "业务精通", correct: false },
-      { text: "对公司的绝对忠诚", correct: true },
-      { text: "沟通能力强", correct: false },
-      { text: "经验丰富", correct: false }
-    ]
-  },
-  {
-    id: 14,
-    type: "single",
-    question: "AI数智部需在哪些环节推进人工智能应用以实现管理升级？",
-    options: [
-      { text: "仅生产环节", correct: false },
-      { text: "煤矿安全、生产过程、经营风险管控等易产生风险的环节", correct: true },
-      { text: "仅销售环节", correct: false },
-      { text: "仅人力资源管理", correct: false }
-    ]
-  },
-  {
-    id: 15,
-    type: "single",
-    question: "建设事业部土建部存在的主要问题是？",
-    options: [
-      { text: "人员不足", correct: false },
-      { text: "制度建设、标准化体系构建薄弱", correct: true },
-      { text: "成本过高", correct: false },
-      { text: "进度滞后", correct: false }
+      { text: "根本要求", correct: false },
+      { text: "鲜明底色", correct: true },
+      { text: "核心目标", correct: false },
+      { text: "关键举措", correct: false }
     ]
   }
 ];
