--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         top: 0;
         width: 100%; /* 全局宽度 */
         height: 100%; /* 全局高度 */
-        background-image: url("https://sns-webpic-qc.xhscdn.com/202511141931/5b93dee737c5f500477f2f6c355f3326/1040g2sg30uibcg5ql8005p662rtipdb2n2gmgpg!nd_dft_wgth_webp_3"); /* 书本纹样图片（示例图，可替换为实际书本纹样） */
+        background-image: url("./img.jpg"); /* 书本纹样图片（示例图，可替换为实际书本纹样） */
         background-size: cover; /* 覆盖整个区域 */
         background-repeat: no-repeat;
         background-position: center; /* 居中显示 */
