--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@
           <div class="title-text">
             <div class="breadcrumb">宝丰人 › 企业文化践行 › 政策热点学习</div>
             <div class="main-title">
-              中共中央关于制定国民经济和社会发展第十五个五年规划的建议
+              关于进一步加强冬季安全管理工作的通知
             </div>
           </div>
         </div>
@@ -1463,167 +1463,139 @@
     <script>
       // 题目数据
       const questions = [
-        {
-          id: 1,
-          type: "single",
-          question:
-            "《中共中央关于制定国民经济和社会发展第十五个五年规划的建议》由哪次会议通过",
-          options: [
-            {
-              text: "中国共产党第十九届中央委员会第四次全体会议",
-              correct: false,
-            },
-            {
-              text: "中国共产党第二十届中央委员会第四次全体会议",
-              correct: true,
-            },
-            {
-              text: "中国共产党第二十届中央委员会第三次全体会议",
-              correct: false,
-            },
-            {
-              text: "中国共产党第二十一届中央委员会第一次全体会议",
-              correct: false,
-            },
-          ],
-        },
-        {
-          id: 2,
-          type: "single",
-          question: "“十五五”时期在基本实现社会主义现代化进程中的地位是",
-          options: [
-            { text: "起步阶段", correct: false },
-            { text: "承前启后的重要地位", correct: true },
-            { text: "收尾阶段", correct: false },
-            { text: "过渡阶段", correct: false },
-          ],
-        },
-        {
-          id: 3,
-          type: "single",
-          question: "“十五五’时期为实现碳达峰目标，实施的能源消费相关举措是",
-          options: [
-            { text: "推动能源消费高碳化", correct: false },
-            { text: "停止新能源开发利用", correct: false },
-            { text: "减少清洁能源", correct: false },
-            { text: "提高终端用能电气化水平", correct: true },
-          ],
-        },
-        {
-          id: 4,
-          type: "single",
-          question:
-            "下列哪项不属于“十五五”时期经济社会发展主要目标中“高质量发展取得显著成效”的内容",
-          options: [
-            { text: "经济增长保持在合理区间", correct: false },
-            { text: "居民消费率明显提高", correct: false },
-            { text: "碳达峰目标如期实现", correct: true },
-            {
-              text: "新型工业化、信息化、城镇化、农业现代化取得重大进展",
-              correct: false,
-            },
-          ],
-        },
-        {
-          id: 5,
-          type: "single",
-          question: "现代化产业体系是中国式现代化的",
-          options: [
-            { text: "精神文化基础", correct: false },
-            { text: "物质技术基础", correct: true },
-            { text: "制度保障基础", correct: false },
-            { text: "社会治理基础", correct: false },
-          ],
-        },
-        {
-          id: 6,
-          type: "single",
-          question: "下列哪项不属于培育壮大新兴产业和未来产业的举措",
-          options: [
-            {
-              text: "加快新能源、新材料等战略性新兴产业集群发展",
-              correct: false,
-            },
-            {
-              text: "推动量子科技、生物制造等成为新的经济增长点",
-              correct: false,
-            },
-            { text: "优化提升产业、回答等传统产业", correct: true },
-            {
-              text: "实施新技术新产品新场景大规模应用示范行动",
-              correct: false,
-            },
-          ],
-        },
-        {
-          id: 7,
-          type: "single",
-          question:
-            "加强原始创新和关键核心技术攻关，完善新型举国体制，全链条推动重点领域关键核心技术攻关取得决定性突破，下列哪项不属于该重点领域",
-          options: [
-            { text: "集成电路", correct: false },
-            { text: "工业母机", correct: false },
-            { text: "高端仪器", correct: false },
-            { text: "纺织机械", correct: true },
-          ],
-        },
-        {
-          id: 8,
-          type: "single",
-          question: "强大国内市场是中国式现代化的",
-          options: [
-            { text: "战略依托", correct: true },
-            { text: "根本目的", correct: false },
-            { text: "根本保障", correct: false },
-            { text: "核心动力", correct: false },
-          ],
-        },
-        {
-          id: 9,
-          type: "single",
-          question: "下列哪项不属于“加快构建高水平社会主义市场经济体制”的举措",
-          options: [
-            { text: "充分激发各类经营主体活力", correct: false },
-            { text: "加快完善要素市场化配置体制机制", correct: false },
-            { text: "提升宏观经济治理能力", correct: false },
-            { text: "推进农业农村现代化", correct: true },
-          ],
-        },
-        {
-          id: 10,
-          type: "single",
-          question:
-            "“十五五”时期加快建设新型能源体系，需推进化石能源的何种发展方式",
-          options: [
-            { text: "全面替代退出", correct: false },
-            { text: "安全可靠有序替代", correct: true },
-            { text: "无限制扩大使用", correct: false },
-            { text: "仅保留煤炭能源使用", correct: false },
-          ],
-        },
-        {
-          id: 11,
-          type: "single",
-          question: "坚持把解决好“三农”问题作为全党工作",
-          options: [
-            { text: "重中之重", correct: true },
-            { text: "首要任务", correct: false },
-            { text: "核心工作", correct: false },
-            { text: "根本任务", correct: false },
-          ],
-        },
-        {
-          id: 12,
-          type: "single",
-          question: "绿色发展是中国式现代化的",
-          options: [
-            { text: "根本要求", correct: false },
-            { text: "鲜明底色", correct: true },
-            { text: "核心目标", correct: false },
-            { text: "关键举措", correct: false },
-          ],
-        },
-      ];
+  {
+    id: 1,
+    type: "single",
+    question: "宁夏宝丰集团发布《关于进一步加强冬季安全管理工作的通知》的核心目的是（）",
+    options: [
+      { text: "推进年度生产经营目标冲刺", correct: false },
+      { text: "防范遏制冬季各类安全事故，确保集团安全平稳运行", correct: true },
+      { text: "规范冬季施工流程", correct: false },
+      { text: "加强员工交通安全管理", correct: false }
+    ]
+  },
+  {
+    id: 2,
+    type: "single",
+    question: "通知中明确的安全管理核心理念是（）",
+    options: [
+      { text: "预防为主、综合治理", correct: false },
+      { text: "安全是企业的生命线", correct: true },
+      { text: "层层压实、人人有责", correct: false },
+      { text: "敬畏生命、敬畏规章", correct: false }
+    ]
+  },
+  {
+    id: 3,
+    type: "single",
+    question: "冬季安全管理工作中，各单位负责人的身份是（）",
+    options: [
+      { text: "安全分管领导", correct: false },
+      { text: "安全监督第一责任人", correct: false },
+      { text: "安全管理第一责任人", correct: true },
+      { text: "一线安全督导员", correct: false }
+    ]
+  },
+  {
+    id: 4,
+    type: "single",
+    question: "生产单位在冬季生产中，关键设备设施管理的核心要求是（）",
+    options: [
+      { text: "缩短运行时间", correct: false },
+      { text: "严禁超温、超压、超负荷运行", correct: true },
+      { text: "减少巡检频次", correct: false },
+      { text: "优先进行技术改造", correct: false }
+    ]
+  },
+  {
+    id: 5,
+    type: "single",
+    question: "冬季环保管控中，危险废物管理需严格执行的流程不包括（）",
+    options: [
+      { text: "分类收集", correct: false },
+      { text: "随意储存", correct: true },
+      { text: "规范转运", correct: false },
+      { text: "合规处置", correct: false }
+    ]
+  },
+  {
+    id: 6,
+    type: "single",
+    question: "冬季施工安全管理明确禁止的行为是（）",
+    options: [
+      { text: "执行冬季施工方案", correct: false },
+      { text: "恶劣天气下冒险作业", correct: true },
+      { text: "关键工序旁站", correct: false },
+      { text: "落实安全防护措施", correct: false }
+    ]
+  },
+  {
+    id: 7,
+    type: "single",
+    question: "车辆冬季安全管理中，恶劣天气下的正确做法是（）",
+    options: [
+      { text: "无特殊情况禁止出行", correct: true },
+      { text: "正常安排运输任务", correct: false },
+      { text: "减少驾驶员培训", correct: false },
+      { text: "取消防滑措施", correct: false }
+    ]
+  },
+  {
+    id: 8,
+    type: "single",
+    question: "餐饮安全管理中，需防范的主要风险是（）",
+    options: [
+      { text: "食材价格波动", correct: false },
+      { text: "食源性疾病", correct: true },
+      { text: "员工用餐排队", correct: false },
+      { text: "餐具样式单一", correct: false }
+    ]
+  },
+  {
+    id: 9,
+    type: "single",
+    question: "冬季“五防”工作中，防寒防冻的重点排查对象不包括（）",
+    options: [
+      { text: "采暖系统", correct: false },
+      { text: "伴热系统", correct: false },
+      { text: "消防水系统", correct: false },
+      { text: "办公家具", correct: true }
+    ]
+  },
+  {
+    id: 10,
+    type: "single",
+    question: "有限空间作业安全管理的核心要求是（）",
+    options: [
+      { text: "简化审批流程", correct: false },
+      { text: "不进行气体检测", correct: false },
+      { text: "严格执行作业审批和气体检测制度", correct: true },
+      { text: "减少通风措施", correct: false }
+    ]
+  },
+  {
+    id: 11,
+    type: "single",
+    question: "冬季安全风险大排查的截止时间是（）",
+    options: [
+      { text: "2025年12月1日", correct: false },
+      { text: "2025年12月31日", correct: false },
+      { text: "2026年春节前", correct: true },
+      { text: "2026年3月1日", correct: false }
+    ]
+  },
+  {
+    id: 12,
+    type: "single",
+    question: "各公司需将贯彻落实情况及自查整改报告上报至（）",
+    options: [
+      { text: "集团生产管理部", correct: false },
+      { text: "集团行政管理部", correct: true },
+      { text: "集团安全监管部", correct: false },
+      { text: "集团人力资源部", correct: false }
+    ]
+  }
+];
       // 当前显示的题目ID
       let currentQuestionId = 0;
       let currentSlideIndex = 0;
