Update quiz questions in index.html

--- a/index.html
+++ b/index.html
@@ -1466,133 +1466,144 @@
   {
     id: 1,
     type: "single",
-    question: "宁夏宝丰集团发布《关于进一步加强冬季安全管理工作的通知》的核心目的是（）",
+    question: "1.宝丰集团始终坚守的安全环保核心理念是()",
     options: [
-      { text: "推进年度生产经营目标冲刺", correct: false },
-      { text: "防范遏制冬季各类安全事故，确保集团安全平稳运行", correct: true },
-      { text: "规范冬季施工流程", correct: false },
-      { text: "加强员工交通安全管理", correct: false }
+      { text: "预防为主、综合治理", correct: false },
+      { text: "安全环保永远是我们的生命线", correct: true },
+      { text: "层层压实", correct: false },
+      { text: "敬畏生命、敬畏规章", correct: false }
     ]
   },
   {
     id: 2,
     type: "single",
-    question: "通知中明确的安全管理核心理念是（）",
+    question: "2.监察部通报宝丰集团一年有多少项\"三违\"问题()",
     options: [
-      { text: "预防为主、综合治理", correct: false },
-      { text: "安全是企业的生命线", correct: true },
-      { text: "层层压实、人人有责", correct: false },
-      { text: "敬畏生命、敬畏规章", correct: false }
+      { text: "1000多项", correct: false },
+      { text: "2000多项", correct: false },
+      { text: "3000多项", correct: true },
+      { text: "4000多项", correct: false }
     ]
   },
   {
     id: 3,
     type: "single",
-    question: "冬季安全管理工作中，各单位负责人的身份是（）",
+    question: "3.宝丰集团每年召开几次重要会议解决经营管理问题()",
     options: [
-      { text: "安全分管领导", correct: false },
-      { text: "安全监督第一责任人", correct: false },
-      { text: "安全管理第一责任人", correct: true },
-      { text: "一线安全督导员", correct: false }
+      { text: "1次", correct: false },
+      { text: "2次", correct: true },
+      { text: "3次", correct: false },
+      { text: "4次", correct: false }
     ]
   },
   {
     id: 4,
     type: "single",
-    question: "生产单位在冬季生产中，关键设备设施管理的核心要求是（）",
+    question: "4.2026年宝丰集团计划搭建的管理平台是()",
     options: [
-      { text: "缩短运行时间", correct: false },
-      { text: "严禁超温、超压、超负荷运行", correct: true },
-      { text: "减少巡检频次", correct: false },
-      { text: "优先进行技术改造", correct: false }
+      { text: "一卡通管理平台", correct: false },
+      { text: "钉钉办公平台", correct: false },
+      { text: "智慧共享管理平台", correct: true },
+      { text: "人财物管控一体化平台", correct: false }
     ]
   },
   {
     id: 5,
     type: "single",
-    question: "冬季环保管控中，危险废物管理需严格执行的流程不包括（）",
+    question: "5.2026年宝丰集团实施现金采购的核心目标是至少降低多少成本()",
     options: [
-      { text: "分类收集", correct: false },
-      { text: "随意储存", correct: true },
-      { text: "规范转运", correct: false },
-      { text: "合规处置", correct: false }
+      { text: "5%", correct: false },
+      { text: "10%", correct: true },
+      { text: "15%", correct: false },
+      { text: "20%", correct: false }
     ]
   },
   {
     id: 6,
     type: "single",
-    question: "冬季施工安全管理明确禁止的行为是（）",
+    question: "6.宝丰集团财务管理的核心要求是()",
     options: [
-      { text: "执行冬季施工方案", correct: false },
-      { text: "恶劣天气下冒险作业", correct: true },
-      { text: "关键工序旁站", correct: false },
-      { text: "落实安全防护措施", correct: false }
+      { text: "控制风险,把每一分钱都要花在刀刃上", correct: true },
+      { text: "扩大融资、增加资金储备", correct: false },
+      { text: "简化流程、提高效率", correct: false },
+      { text: "加大投入、推动创新", correct: false }
     ]
   },
   {
     id: 7,
     type: "single",
-    question: "车辆冬季安全管理中，恶劣天气下的正确做法是（）",
+    question: "7.宝丰集团对监察部的工作要求是()",
     options: [
-      { text: "无特殊情况禁止出行", correct: true },
-      { text: "正常安排运输任务", correct: false },
-      { text: "减少驾驶员培训", correct: false },
-      { text: "取消防滑措施", correct: false }
+      { text: "重点监管、事后问责", correct: false },
+      { text: "全覆盖、无盲区,从源头控制风险", correct: true },
+      { text: "宽松管理、以人为本", correct: false },
+      { text: "只监管关键岗位、简化流程", correct: false }
     ]
   },
   {
     id: 8,
     type: "single",
-    question: "餐饮安全管理中，需防范的主要风险是（）",
+    question: "8.宝丰集团采购工作的核心理念可概括为哪八个字()",
     options: [
-      { text: "食材价格波动", correct: false },
-      { text: "食源性疾病", correct: true },
-      { text: "员工用餐排队", correct: false },
-      { text: "餐具样式单一", correct: false }
+      { text: "质量优先、成本可控", correct: false },
+      { text: "质量、成本、诚信、共赢", correct: true },
+      { text: "诚信为本", correct: false },
+      { text: "降本增效、合规采购", correct: false }
     ]
   },
   {
     id: 9,
     type: "single",
-    question: "冬季“五防”工作中，防寒防冻的重点排查对象不包括（）",
+    question: "9.宝丰集团现金采购需坚决杜绝的行为是()",
     options: [
-      { text: "采暖系统", correct: false },
-      { text: "伴热系统", correct: false },
-      { text: "消防水系统", correct: false },
-      { text: "办公家具", correct: true }
+      { text: "技术人员全程参与质量把控", correct: false },
+      { text: "乱付预付款", correct: true },
+      { text: "推行数据化、透明化管理", correct: false },
+      { text: "对比分析采购数据", correct: false }
     ]
   },
   {
     id: 10,
     type: "single",
-    question: "有限空间作业安全管理的核心要求是（）",
+    question: "10.宝丰集团造价管理创新的核心方向是()",
     options: [
-      { text: "简化审批流程", correct: false },
-      { text: "不进行气体检测", correct: false },
-      { text: "严格执行作业审批和气体检测制度", correct: true },
-      { text: "减少通风措施", correct: false }
+      { text: "简化造价流程,降低精准度", correct: false },
+      { text: "把造价工作标准化,建立完善造价模型", correct: true },
+      { text: "完全依赖施工单位报价", correct: false },
+      { text: "无需建立标准,按需核算", correct: false }
     ]
   },
   {
     id: 11,
     type: "single",
-    question: "冬季安全风险大排查的截止时间是（）",
+    question: "11.今年企管部重新改变的核心是()",
     options: [
-      { text: "2025年12月1日", correct: false },
-      { text: "2025年12月31日", correct: false },
-      { text: "2026年春节前", correct: true },
-      { text: "2026年3月1日", correct: false }
+      { text: "扩大组织架构、增加人员编制", correct: false },
+      { text: "优化、合理、高效运行", correct: true },
+      { text: "维持现有制度、无需调整", correct: false },
+      { text: "仅负责制度制定,不参与流程优化", correct: false }
     ]
   },
   {
     id: 12,
     type: "single",
-    question: "各公司需将贯彻落实情况及自查整改报告上报至（）",
+    question: "12.行政管理中,会议管理要求坚决不开的会议类型是()",
     options: [
-      { text: "集团生产管理部", correct: false },
-      { text: "集团行政管理部", correct: true },
-      { text: "集团安全监管部", correct: false },
-      { text: "集团人力资源部", correct: false }
+      { text: "专题会", correct: false },
+      { text: "解决具体问题的会", correct: false },
+      { text: "废会、闲会、无用的会", correct: true },
+      { text: "能拍板决策的会", correct: false }
+    ]
+  },
+  {
+    id: 13,
+    type: "multi",
+    question: "13.宝丰集团审计管理工作必须做到的要求包括()",
+    options: [
+      { text: "全流程、穿透式审计", correct: true },
+      { text: "走过场、搞应付", correct: false },
+      { text: "开展前瞻性审计", correct: true },
+      { text: "以发现问题、优化制度体现成效", correct: true }
     ]
   }
 ];
