--- a/index.html
+++ b/index.html
@@ -1462,7 +1462,7 @@
 
     <script>
       // 题目数据
-      const questions = [
+const questions = [
   {
     id: 1,
     type: "single",
@@ -1604,6 +1604,39 @@
       { text: "走过场、搞应付", correct: false },
       { text: "开展前瞻性审计", correct: true },
       { text: "以发现问题、优化制度体现成效", correct: true }
+    ]
+  },
+  {
+    id: 14,
+    type: "multi",
+    question: "14. 宝丰集团行政管理重点抓好的工作有（）",
+    options: [
+      { text: "运行管理与效能管理", correct: true },
+      { text: "会议实效与干部履职", correct: true },
+      { text: "后勤保障与对外关系", correct: true },
+      { text: "仅负责日常考勤与文件收发", correct: false }
+    ]
+  },
+  {
+    id: 15,
+    type: "multi",
+    question: "15. 宝丰集团企管部今年工作的核心要求有（）",
+    options: [
+      { text: "优化制度、流程、架构", correct: true },
+      { text: "实现管理合理、高效运行", correct: true },
+      { text: "支撑扁平化管理", correct: true },
+      { text: "维持现有管理模式不变", correct: false }
+    ]
+  },
+  {
+    id: 16,
+    type: "multi",
+    question: "16. 宝丰集团企业文化建设的目标包括（）",
+    options: [
+      { text: "全面提炼、总结优秀企业文化", correct: true },
+      { text: "让内部员工认可、认同企业文化", correct: true },
+      { text: "提升宝丰社会影响力和美誉度", correct: true },
+      { text: "仅做好内部文化活动宣传", correct: false }
     ]
   }
 ];
