Update main title in index.html

--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@
           <div class="title-text">
             <div class="breadcrumb">宝丰人 › 企业文化践行 › 政策热点学习</div>
             <div class="main-title">
-              关于进一步加强冬季安全管理工作的通知
+              2026年02月政策热点学习试题分享
             </div>
           </div>
         </div>
