--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       /* 用伪元素添加版权文字，独立居中 */
       .navigation-buttons:after {
-        content: "©2025";
+        content: "©2026 Fgyc Copyright.";
         display: block;
         position: absolute;
         left: 50%;
